# JMSoftRenderer

./: .gitignore  README.md
JMSoftRenderer/: CMakeLists.txt  CMakeSettings.json  FrameBuffer.cpp  JMSoftRenderer.sln  Main.cpp  Pipeline.cpp  Window.cpp
JMSoftRenderer/Core/: Color.h  Define.h  Math.h  Matrix.h  Vector.h
JMSoftRenderer/JMSoftRenderer/: Color.h  Define.h  FrameBuffer.cpp  FrameBuffer.h  JMSoftRenderer.vcxproj  JMSoftRenderer.vcxproj.filters  Main.cpp  Math.h  Matrix.h  Matrix4x4.h  Pipeline.cpp  Pipeline.h  Primitives.h  Scene.h  Vector.h  Window.cpp  Window.h
JMSoftRenderer/JMSoftRenderer/x64/Debug/: vc142.idb
JMSoftRenderer/JMSoftRenderer/x64/Debug/JMSoftRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  JMSoftRenderer.lastbuildstate  JMSoftRenderer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
JMSoftRenderer/header/: FrameBuffer.h  Pipeline.h  Primitives.h  Scene.h  Shader.h  Window.h
SoftRenderer/SoftRenderer/: FrameBuffer.cpp  Main.cpp  Pipeline.cpp  SoftRenderer.vcxproj
SoftRenderer_Monofile/: SoftRenderer.cpp  SoftRenderer.sln  SoftRenderer.vcxproj  SoftRenderer.vcxproj.filters
models/spot/: triangle.mtl
models/spot/.mayaSwatches/: spot_texture.png_hcm.swatch  uv_texture.png_hcm.swatch  uv_texture_inv.png_hcm.swatch
